# microrust-start

./: Cargo.toml  README.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs
applib/src/: lib.rs
nrf-app/: Cargo.toml
nrf-app/src/: main.rs
src/: main.rs
